<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/django_unchained" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/placeholder_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/img_poster" />

    <TextView
        android:id="@+id/tv_label_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/label_release_date"
        android:drawablePadding="4dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:drawableStartCompat="@drawable/ic_calendar_black_18" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/placeholder_date"
        app:layout_constraintTop_toBottomOf="@id/tv_label_release_date"
        app:layout_constraintStart_toStartOf="@id/tv_label_release_date"/>

    <TextView
        android:id="@+id/tv_label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/label_rating"
        android:drawablePadding="4dp"
        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        app:drawableStartCompat="@drawable/ic_star_gold_18" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/placeholder_rating"
        app:layout_constraintTop_toBottomOf="@id/tv_label_rating"
        app:layout_constraintStart_toStartOf="@id/tv_label_rating"/>

    <TextView
        android:id="@+id/tv_label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_overview"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_overview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>