...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/img_poster" />

    <TextView
        android:id="@+id/tv_label_first_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/label_first_air_date"
        android:drawablePadding="4dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:drawableStartCompat="@drawable/ic_calendar_black_18" />

    <TextView
        android:id="@+id/tv_first_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/placeholder_date"
...
